[gd_scene load_steps=4 format=3 uid="uid://ce1ukp83m18wd"]

[ext_resource type="Script" path="res://Scenes/teleporter_pair.gd" id="1_odrbs"]
[ext_resource type="Texture2D" uid="uid://dqlkwyewbllpb" path="res://Sprites/Teleporter.png" id="2_fp3ow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5nc8"]
size = Vector2(28, 2)

[node name="TeleporterPair" type="Node2D"]
position = Vector2(439, -49)
script = ExtResource("1_odrbs")

[node name="Teleporter1" type="StaticBody2D" parent="."]
position = Vector2(-51, 0)

[node name="Sprite" type="Sprite2D" parent="Teleporter1"]
position = Vector2(-1, -1)
texture = ExtResource("2_fp3ow")
offset = Vector2(0, 0.5)

[node name="Collider" type="CollisionPolygon2D" parent="Teleporter1"]
position = Vector2(-1, 1)
polygon = PackedVector2Array(-20, 0, -15, -3, 15, -3, 20, 0)

[node name="InteractionArea" type="Area2D" parent="Teleporter1"]

[node name="InteractionShape" type="CollisionShape2D" parent="Teleporter1/InteractionArea"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_h5nc8")

[node name="Teleporter2" type="StaticBody2D" parent="."]
position = Vector2(112, 0)

[node name="Sprite" type="Sprite2D" parent="Teleporter2"]
position = Vector2(-1, -1)
texture = ExtResource("2_fp3ow")
offset = Vector2(0, 0.5)

[node name="Collider" type="CollisionPolygon2D" parent="Teleporter2"]
position = Vector2(-1, 1)
polygon = PackedVector2Array(-20, 0, -15, -3, 15, -3, 20, 0)

[node name="InteractionArea" type="Area2D" parent="Teleporter2"]

[node name="InteractionShape" type="CollisionShape2D" parent="Teleporter2/InteractionArea"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_h5nc8")
